<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">远程锁屏</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎使用</string>
    <string name="in">点我进入</string>
    
    <string name="userName">用户名：</string>
    <string name="password">密　码：</string>
    
    <string name="serverAddr">服务器IP：</string>
    <string name="rememberPassword">记住密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="control">控制端</string>
    <string name="beControled">被控端</string>
    
    <string name="rePassword">确认密码：</string>
    <string name="active">激活设备管理器</string>
    <string name="introduce">说明：请激活设备管理器，否则锁屏功能无法实现</string>

    <string name="connect">点击连接对端</string>
    <string name="access">点击获取对端状态</string>
    <string name="state">对端上线情况（有IP地址表示已经上线）</string>
    <string name="unlock">解锁</string>
    <string name="lock">锁屏</string>
    
    <string name="close">关闭应用</string>
    <string name="refresh">点击刷新，获取对端状态</string>
    <string name="hisState">对端状态：</string>
</resources>
